--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Clima San Miguel</title>
+  <title>Farmacia Pintar</title>
   <style>
     body {
       margin: 0;
@@ -59,14 +59,11 @@
       color: #aaa;
     }
   </style>
-</head>
 <body>
   <div class="container">
-    <h1>Clima en San Miguel</h1>
-    <div class="time" id="time">Cargando hora...</div>
-    <div class="current-weather" id="current">Cargando clima...</div>
-    <div class="forecast" id="forecast"></div>
+    <h1>PARA VER LOS TURNOS <a href="http://www.turnosdefarmacias.info" target="_blank">HAGA CLICK AQUI</a> O VISITE www.turnosdefarmacias.info</h1>
   </div>
+</body>
 
   <script>
     const API_KEY = '092796584988dbd553ec6facdeacf81b';
